fix cards align

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -148,3 +148,11 @@ h1.heading {
     height: auto;
   }
 }
+
+
+@media screen and (max-width: 800px) {
+  .card-container {
+    justify-content: center;
+  }
+  
+}
